Change font url

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
   @font-face {
     font-family: "Wetering_Regular_One";
-    src: url("fonts/Wetering_Regular_One.otf") format('opentype');
+    src: url("../fonts/Wetering_Regular_One.otf") format('opentype');
   }
 
 * {
