--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,68 @@ img {
   /*padding: 0 20px 0 20px;*/
 }
 
+.toggle-menu {
+  display: none;
+  width: 37px;
+  height: 1.2em;
+  position: absolute;
+  top: 13px;
+  right: 20px;
+
+  cursor: pointer;
+
+  opacity: 0;  /*hide this*/
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+.hamburger-line {
+  display: none;
+  width: 30px;
+  height: 2px;
+  position: absolute;
+  top: 15px;
+  right: 20px;
+
+  background: #575756;
+
+  z-index: 1;
+}
+
+.hamburger-line + .hamburger-line {
+  top: 23px;
+}
+
+.hamburger-line + .hamburger-line + .hamburger-line {
+  top: 31px;
+}
+
+.white {
+  background: white;
+  height: 10px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+}
+
+.toggle-menu:checked ~ ul {
+  display: block;
+  position: absolute;
+  background: white;
+  right: 0;
+  top: 49px;
+  text-align: right;
+  padding: 0 20px 20px 20px;
+  box-shadow: 0px -20px 0 0px white, -2px 2px 20px 0 #575756;
+}
+
+.toggle-menu:checked ~ ul li {
+  display: block;
+  margin-left: 0;
+}
+
 /* POSTS */
 .posts-list {
   max-width: 1280px;
@@ -122,12 +184,14 @@ img {
 
 .posts-list > li {
   width: 370px;
+  max-width: 100%;
 }
 
 .posts-list .post {
   border-radius: 20px;
   padding: 30px;
   width: 370px;
+  max-width: 100%;
   margin-bottom: 35px;
 }
 
@@ -228,8 +292,8 @@ img {
 /* PROJECTS */
 
 .projects {
-  font-size: 1.5em;
-  line-height: 1.5em;
+  font-size: 1.2em;
+  line-height: 1.2em;
   background-color: #BBBBBB;
   color: white;
   text-shadow: 3px 3px 6px #575756;
@@ -293,6 +357,7 @@ img {
   cursor: pointer;
   margin: 0 auto;
   margin-bottom: 120px;
+  max-width: 100%;
 }
 
 .publication.variant-1 {
@@ -370,5 +435,39 @@ img {
 @media (max-width: 1150px) {
   .publications-list > li {
     width: 49%;
+  }
+}
+
+/* single column */
+@media (max-width: 767px) {
+  .primary-nav ul {
+    display: none;
+  }
+
+  .toggle-menu,
+  .hamburger-line {
+    display: block;
+  }
+
+  .posts-list > li {
+      margin: 0 auto;
+  }
+
+  .publications-list > li {
+    width: 100%;
+  }
+
+  .contact .address,
+  .contact .team {
+    padding: 0;
+    width: 100%;
+  }
+
+  .projects {
+    font-size: 1em;
+  }
+
+  .projects table tr td {
+    padding-right: 5px;
   }
 }
