--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ img {
   top: 49px;
   text-align: right;
   padding: 0 20px 20px 20px;
-  box-shadow: 0px -15px 0 0px white, -2px 2px 20px 0 #575756;
+  box-shadow: -2px 2px 20px 0 #575756;
 }
 
 .toggle-menu:checked ~ ul li {
