--- a/css/main.css
+++ b/css/main.css
@@ -304,10 +304,7 @@ img {
 }
 
 .projects table tr td.divider {
-  padding: 0;
-  background: white;
-  height: 2px;
-  box-shadow: 3px 3px 6px #575756;
+  display: none;
 }
 
 .projects table tr td:nth-child(1) {
@@ -457,6 +454,14 @@ img {
 
   .posts-list > li {
       margin: 0 auto;
+  }
+
+  .projects table tr td.divider {
+    display: table-cell;
+    padding: 0;
+    background: white;
+    height: 2px;
+    box-shadow: 3px 3px 6px #575756;
   }
 
   .publications-list > li {
